# sandbox

Sandbox/: CMakeLists.txt  main.cpp
Sandbox/src/HM1/: HM1_1.cpp  HM1_1.h
Sandbox/src/HM1/AoSvsSoA/: H1_AoSvsSoA.cpp  H1_AoSvsSoA.h  ParticleAoS.h  ParticleSoA.h
Sandbox/tests/: CMakeLists.txt  H1_AoSvsSoA_test.cpp  HM1_1_test.cpp
